package edu.fiuba.algo3.modelo.Defensas;
import edu.fiuba.algo3.modelo.Enemigos.Enemigo;
import java.util.ArrayList;

import edu.fiuba.algo3.modelo.Enemigos.Sprayable;
import edu.fiuba.algo3.modelo.miscelanea.Coordenada;


public abstract class Defensa extends Sprayable {
    protected Coordenada posicion;
    protected EstadoConstruccion estadoDeConstruccion;
    protected int rangoAtaque;
    protected TipoDeDefensa tipoDeDefensa;
    private String sonidoCorrespondiente;

    public Defensa(int tiempoDeConstruccion, int rangoAtaque, TipoDeDefensa tipoDeDefensa){
        this.posicion = null;
        this.rangoAtaque = rangoAtaque;
        this.estadoDeConstruccion = new EnConstruccion(tiempoDeConstruccion);
        this.tipoDeDefensa = tipoDeDefensa;

        //CAMBIAR ESTO
        //Logger logger = new Logger();
        //this.emisor = new Emisor();
        //this.emisor.subcribir(logger);

    }

    public Defensa(Coordenada posicion, int tiempoDeConstruccion, int rangoAtaque){
        this.posicion = posicion;
        this.rangoAtaque = rangoAtaque;
        this.estadoDeConstruccion = new EnConstruccion(tiempoDeConstruccion);
    }

    public void asignarPosicion(Coordenada nuevaPosicion){
        this.posicion = nuevaPosicion;
    }

    public void pasarTurno(){
        //this.estadoDeConstruccion = estadoDeConstruccion.pasoUnTurno(this.emisor, this);
        this.estadoDeConstruccion = estadoDeConstruccion.pasoUnTurno(this);
    }

    //borrar esta funcion mas adelante
    public boolean estaConstruida(){
        return estadoDeConstruccion.estoyConstruida();
    }

    public void atacar(ArrayList<Enemigo> enemigos ){
        this.estadoDeConstruccion.atacar(tipoDeDefensa, enemigos, this.posicion, this.rangoAtaque, this.representationString());
        setChanged();
    }

    public abstract String representationString();

    public ArrayList<String> ObtenerSprayIDYPosicion(){
        ArrayList<String> datos = new ArrayList<>();

        if(this.estadoDeConstruccion.estoyConstruida()){
            datos.add(this.representationString());
            datos.add(this.posicion.representacionString());
            datos.add(this.estadoDeConstruccion.versonido());
        }

        return datos;
    }

}
